updated VTNativeUtils class