@@ -1,5 +1,7 @@
 package org.vash.vate.nativeutils;
 
+import java.io.File;
+import java.io.FileOutputStream;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -26,7 +28,17 @@ public class VTNativeUtils
   
   private static final int SAMPLE_RATE_HERTZ = 16000;
   private static final int SAMPLE_SIZE_BITS = 8;
-  // public abstract int true_isatty(int fd);
+  
+  private static final String WIN32_EJECT_DISC_TRAY_VBS = "On Error Resume Next\r\n" + 
+  "For Each d in CreateObject(\"Scripting.FileSystemObject\").Drives\r\n" + 
+  "    If d.DriveType = 4 Then\r\n" + 
+  "        CreateObject(\"Shell.Application\").Namespace(17).ParseName(d.DriveLetter & \":\\\").InvokeVerb(\"Eject\")\r\n" + 
+  "        Exit For\r\n" + 
+  "    End If\r\n" + 
+  "Next\r\n" + 
+//  "WScript.Sleep(5000)\r\n" + 
+//  "WScript.Echo(\"5 seconds have passed.\")\r\n" + 
+  "WScript.Quit";
   
   public synchronized static void initialize()
   {
@@ -112,7 +124,7 @@ public class VTNativeUtils
           // try to call eject on non-windows
           try
           {
-            int status = Runtime.getRuntime().exec("eject").waitFor();
+            int status = Runtime.getRuntime().exec(new String[]{"eject", "-r"}).waitFor();
             return status == 0;
           }
           catch (Throwable e)
@@ -122,7 +134,26 @@ public class VTNativeUtils
         }
         else
         {
-          // do nothing
+          // try to use cscript windows script host vbs file
+          File tmpdtvbsFile = null;
+          try
+          {
+            tmpdtvbsFile = File.createTempFile("vate_win32_tmp_eject_disc_tray_vbs", ".vbs");
+            FileOutputStream output = new FileOutputStream(tmpdtvbsFile);
+            output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
+            output.flush();
+            output.close();
+            int status = Runtime.getRuntime().exec("cscript " + tmpdtvbsFile.getAbsolutePath()).waitFor();
+            return status == 0;
+          }
+          catch (Throwable e)
+          {
+            
+          }
+          if (tmpdtvbsFile != null)
+          {
+            tmpdtvbsFile.delete();
+          }
         }
       }
       else
@@ -137,7 +168,7 @@ public class VTNativeUtils
         // try to call eject on non-windows
         try
         {
-          int status = Runtime.getRuntime().exec("eject").waitFor();
+          int status = Runtime.getRuntime().exec(new String[]{"eject", "-r"}).waitFor();
           return status == 0;
         }
         catch (Throwable e)
@@ -147,7 +178,26 @@ public class VTNativeUtils
       }
       else
       {
-        // do nothing
+        // try to use cscript windows script host vbs file
+        File tmpdtvbsFile = null;
+        try
+        {
+          tmpdtvbsFile = File.createTempFile("vate_win32_tmp_eject_disc_tray_vbs", ".vbs");
+          FileOutputStream output = new FileOutputStream(tmpdtvbsFile);
+          output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
+          output.flush();
+          output.close();
+          int status = Runtime.getRuntime().exec("cscript " + tmpdtvbsFile.getAbsolutePath()).waitFor();
+          return status == 0;
+        }
+        catch (Throwable e)
+        {
+          
+        }
+        if (tmpdtvbsFile != null)
+        {
+          tmpdtvbsFile.delete();
+        }
       }
     }
     return false;
@@ -166,8 +216,7 @@ public class VTNativeUtils
           // try to call eject on non-windows
           try
           {
-            int status = Runtime.getRuntime().exec(new String[]
-            { "eject", "-t" }).waitFor();
+            int status = Runtime.getRuntime().exec(new String[]{"eject", "-t"}).waitFor();
             return status == 0;
           }
           catch (Throwable e)
@@ -177,7 +226,26 @@ public class VTNativeUtils
         }
         else
         {
-          // do nothing
+          // try to use cscript windows script host vbs file
+          File tmpdtvbsFile = null;
+          try
+          {
+            tmpdtvbsFile = File.createTempFile("vate_win32_tmp_eject_disc_tray_vbs", ".vbs");
+            FileOutputStream output = new FileOutputStream(tmpdtvbsFile);
+            output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
+            output.flush();
+            output.close();
+            int status = Runtime.getRuntime().exec("cscript " + tmpdtvbsFile.getAbsolutePath()).waitFor();
+            return status == 0;
+          }
+          catch (Throwable e)
+          {
+            
+          }
+          if (tmpdtvbsFile != null)
+          {
+            tmpdtvbsFile.delete();
+          }
         }
       }
       else
@@ -192,8 +260,7 @@ public class VTNativeUtils
         // try to call eject on non-windows
         try
         {
-          int status = Runtime.getRuntime().exec(new String[]
-          { "eject", "-t" }).waitFor();
+          int status = Runtime.getRuntime().exec(new String[]{"eject", "-t"}).waitFor();
           return status == 0;
         }
         catch (Throwable e)
@@ -203,7 +270,26 @@ public class VTNativeUtils
       }
       else
       {
-        // do nothing
+        // try to use cscript windows script host vbs file
+        File tmpdtvbsFile = null;
+        try
+        {
+          tmpdtvbsFile = File.createTempFile("vate_win32_tmp_eject_disc_tray_vbs", ".vbs");
+          FileOutputStream output = new FileOutputStream(tmpdtvbsFile);
+          output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
+          output.flush();
+          output.close();
+          int status = Runtime.getRuntime().exec("cscript " + tmpdtvbsFile.getAbsolutePath()).waitFor();
+          return status == 0;
+        }
+        catch (Throwable e)
+        {
+          
+        }
+        if (tmpdtvbsFile != null)
+        {
+          tmpdtvbsFile.delete();
+        }
       }
     }
     return false;
